<?xml version="1.0"?>
<package>
  <name>sros_demos</name>
  <version>0.0.0</version>
  <description>
    A few little Python programs.
  </description>
  <maintainer email="morgan@osrfoundation.org">Morgan Quigley</maintainer>
  <license>BSD</license>
  <author>Morgan Quigley</author>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>rospy</run_depend>
</package>
